--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-  <link href="./Product_files/css2" rel="stylesheet">
-  <link href="./Product_files/css2(1)" rel="stylesheet">
+  <link href="./css2" rel="stylesheet">
+  <link href="./css2(1)" rel="stylesheet">
 </head>
 
 <body>
